projects/electronic-bazaar/eb-deployment/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: electronic-bazaar-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: electronic-bazaar-auth
  template:
    metadata:
      labels:
        app: electronic-bazaar-auth
    spec:
      containers:
        - name: electronic-bazaar-auth
          image: shubhamnamdev01/electronic-bazaar-auth-service:v1
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: electronic-bazaar-auth-service
spec:
  selector:
    app: electronic-bazaar-auth
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
