projects/electronic-bazaar/eb-deployment/k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: electronic-bazaar-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: electronic-bazaar-customer
  template:
    metadata:
      labels:
        app: electronic-bazaar-customer
    spec:
      containers:
        - name: electronic-bazaar-customer
          image: shubhamnamdev01/electronic-bazaar-customer-service:v1
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: electronic-bazaar-customer-service
spec:
  selector:
    app: electronic-bazaar-customer
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
