projects/electronic-bazaar/eb-deployment/k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: electronic-bazaar-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: electronic-bazaar-order
  template:
    metadata:
      labels:
        app: electronic-bazaar-order
    spec:
      containers:
        - name: electronic-bazaar-order
          image: shubhamnamdev01/electronic-bazaar-order-service:v1
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: electronic-bazaar-order-service
spec:
  selector:
    app: electronic-bazaar-order
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
