projects/electronic-bazaar/eb-deployment/k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: electronic-bazaar-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: electronic-bazaar-payment
  template:
    metadata:
      labels:
        app: electronic-bazaar-payment
    spec:
      containers:
        - name: electronic-bazaar-payment
          image: shubhamnamdev01/electronic-bazaar-payment-service:v1
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: electronic-bazaar-payment-service
spec:
  selector:
    app: electronic-bazaar-payment
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
