projects/electronic-bazaar/eb-deployment/k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: electronic-bazaar-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: electronic-bazaar-product
  template:
    metadata:
      labels:
        app: electronic-bazaar-product
    spec:
      containers:
        - name: electronic-bazaar-product
          image: shubhamnamdev01/electronic-bazaar-product-service:v1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: electronic-bazaar-product-service
spec:
  selector:
    app: electronic-bazaar-product
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
